Java17 (#525)
* feat: java 17, spring boot 3 and many other upgrades (wip)

* fix: travis config

* prepare next version

* shiro jakarta, jetty upgrade

* keep namespace org.apache.oltu

* logback upgraded

* clean jackson dependency (xml bind jakarta conflict)

* remove spring.profiles property from profile specific config files

* mongodb upgrade

* fix: AES GCM cipher has no padding

* ehcache 3 support for shiro

* fix: mongodb converters added for read/write conversions

* added some missing Component/Configuration annotations for jersey to work

* jwt libs and api upgraded

* spring boot 3.1

* esapi, json-path, json-smart upgraded, embeded mongo dep removed

* recommends java17 in debien pkg