@@ -12,13 +12,13 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.obiba.agate</groupId>
   <artifactId>agate</artifactId>
-  <version>2.9-SNAPSHOT</version>
+  <version>3.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.7.18</version>
+    <version>3.1.8</version>
   </parent>
 
   <modules>
@@ -30,44 +30,49 @@
   </modules>
 
   <properties>
+    <maven.compiler.target>17</maven.compiler.target>
+    <maven.compiler.source>17</maven.compiler.source>
+
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <java.version>1.8</java.version>
 
     <assertj-core.version>1.7.1</assertj-core.version>
     <awaitility.version>1.4.0</awaitility.version>
-    <codahale-metrics.version>3.0.2</codahale-metrics.version>
+    <dropwizard-metrics.version>4.2.23</dropwizard-metrics.version>
     <commons-io.version>2.7</commons-io.version>
     <commons-lang.version>2.6</commons-lang.version>
-    <embed-mongo.version>1.50.0</embed-mongo.version>
-    <esapi.version>2.3.0.0</esapi.version>
+    <easymock.version>5.2.0</easymock.version>
+    <ehcache.version>3.10.8</ehcache.version>
+    <esapi.version>2.5.3.1</esapi.version>
     <freemarker.version>2.3.29</freemarker.version>
     <guava.version>19.0</guava.version>
+    <json-api.version>2.1.3</json-api.version>
     <javax.inject.version>1</javax.inject.version>
-    <jersey.version>2.36</jersey.version>
-    <jetty.version>9.4.48.v20220622</jetty.version>
+    <jersey.version>3.1.3</jersey.version>
+    <jetty.version>11.0.19</jetty.version>
     <jhipsterloaded.version>0.7</jhipsterloaded.version>
-    <jjwt.version>0.9.1</jjwt.version>
+    <jjwt.version>0.12.3</jjwt.version>
     <joda-time.version>2.8.2</joda-time.version>
-    <json-path.version>2.2.0</json-path.version>
-    <json-smart.version>2.3.1</json-smart.version>
+    <json-path.version>2.8.0</json-path.version>
+    <json-smart.version>2.4.9</json-smart.version>
     <jsr305.version>3.0.0</jsr305.version>
     <lang-tag.version>1.4.4</lang-tag.version>
-    <logback.version>1.2.9</logback.version>
-    <logstash-logback.version>6.6</logstash-logback.version>
+    <logback.version>1.4.14</logback.version>
+    <logstash-logback.version>7.4</logstash-logback.version>
     <mariabd.version>3.0.7</mariabd.version>
     <metrics-spring.version>3.0.0</metrics-spring.version>
-    <mongodb-driver.version>4.7.2</mongodb-driver.version>
+    <mongodb-driver.version>4.9.1</mongodb-driver.version>
     <mysql.version>8.0.30</mysql.version>
-    <nimbus-jose-jwt.version>7.9</nimbus-jose-jwt.version>
+    <nimbus-jose-jwt.version>9.35</nimbus-jose-jwt.version>
     <nosqlunit.version>0.7.9</nosqlunit.version>
-    <oauth-oidc-sdk.version>5.45</oauth-oidc-sdk.version>
-    <obiba-commons.version>3.1-SNAPSHOT</obiba-commons.version>
-    <oltu.version>1.0.1</oltu.version>
+    <oauth-oidc-sdk.version>11.0</oauth-oidc-sdk.version>
+    <obiba-commons.version>4.0-SNAPSHOT</obiba-commons.version>
+    <parsson.version>1.1.5</parsson.version>
     <postgres.version>42.5.1</postgres.version>
-    <protobuf.version>2.5.0</protobuf.version>
+    <protobuf.version>3.24.3</protobuf.version>
     <protobuf-java-format.version>1.2.1-obiba</protobuf-java-format.version>
-    <shiro.version>1.12.0</shiro.version>
+    <servlet-api.version>6.0.0.RC1-jbossorg-1</servlet-api.version>
+    <shiro.version>1.13.0</shiro.version>
     <shiro-extras.version>1.1.0</shiro-extras.version>
     <totp.version>1.7.1</totp.version>
 
@@ -121,42 +126,48 @@
         <type>war</type>
       </dependency>
       <dependency>
-        <groupId>com.codahale.metrics</groupId>
+        <groupId>io.dropwizard.metrics</groupId>
         <artifactId>metrics-core</artifactId>
-        <version>${codahale-metrics.version}</version>
+        <version>${dropwizard-metrics.version}</version>
       </dependency>
       <dependency>
-        <groupId>com.codahale.metrics</groupId>
+        <groupId>io.dropwizard.metrics</groupId>
         <artifactId>metrics-ehcache</artifactId>
-        <version>${codahale-metrics.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>com.codahale.metrics</groupId>
-        <artifactId>metrics-graphite</artifactId>
-        <version>${codahale-metrics.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>com.codahale.metrics</groupId>
-        <artifactId>metrics-json</artifactId>
-        <version>${codahale-metrics.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>com.codahale.metrics</groupId>
-        <artifactId>metrics-jvm</artifactId>
-        <version>${codahale-metrics.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>com.codahale.metrics</groupId>
-        <artifactId>metrics-servlet</artifactId>
-        <version>${codahale-metrics.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>com.codahale.metrics</groupId>
-        <artifactId>metrics-servlets</artifactId>
-        <version>${codahale-metrics.version}</version>
+        <version>${dropwizard-metrics.version}</version>
         <exclusions>
           <exclusion>
-            <groupId>com.codahale.metrics</groupId>
+            <groupId>net.sf.ehcache</groupId>
+            <artifactId>ehcache</artifactId>
+          </exclusion>
+        </exclusions>
+      </dependency>
+      <dependency>
+        <groupId>io.dropwizard.metrics</groupId>
+        <artifactId>metrics-graphite</artifactId>
+        <version>${dropwizard-metrics.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.dropwizard.metrics</groupId>
+        <artifactId>metrics-json</artifactId>
+        <version>${dropwizard-metrics.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.dropwizard.metrics</groupId>
+        <artifactId>metrics-jvm</artifactId>
+        <version>${dropwizard-metrics.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.dropwizard.metrics</groupId>
+        <artifactId>metrics-jakarta-servlet</artifactId>
+        <version>${dropwizard-metrics.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.dropwizard.metrics</groupId>
+        <artifactId>metrics-jakarta-servlets</artifactId>
+        <version>${dropwizard-metrics.version}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>io.dropwizard.metrics</groupId>
             <artifactId>metrics-healthchecks</artifactId>
           </exclusion>
         </exclusions>
@@ -175,6 +186,24 @@
         <groupId>commons-io</groupId>
         <artifactId>commons-io</artifactId>
         <version>${commons-io.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>jakarta.json</groupId>
+        <artifactId>jakarta.json-api</artifactId>
+        <version>${json-api.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.eclipse.parsson</groupId>
+        <artifactId>parsson</artifactId>
+        <version>${parsson.version}</version>
+        <scope>runtime</scope>
+      </dependency>
+
+      <dependency>
+        <groupId>jakarta.servlet</groupId>
+        <artifactId>jakarta.servlet-api</artifactId>
+        <version>${servlet-api.version}</version>
       </dependency>
       <dependency>
         <groupId>javax.inject</groupId>
@@ -233,6 +262,13 @@
         <groupId>com.jayway.awaitility</groupId>
         <artifactId>awaitility</artifactId>
         <version>${awaitility.version}</version>
+        <scope>test</scope>
+      </dependency>
+      <!-- https://mvnrepository.com/artifact/org.easymock/easymock -->
+      <dependency>
+        <groupId>org.easymock</groupId>
+        <artifactId>easymock</artifactId>
+        <version>${easymock.version}</version>
         <scope>test</scope>
       </dependency>
 
@@ -397,29 +433,66 @@
       </dependency>
 
       <dependency>
+        <groupId>org.ehcache</groupId>
+        <artifactId>ehcache</artifactId>
+        <version>${ehcache.version}</version>
+        <classifier>jakarta</classifier>
+      </dependency>
+      <dependency>
+        <groupId>org.ehcache.integrations.shiro</groupId>
+        <artifactId>shiro-ehcache3</artifactId>
+        <version>1.0.0</version>
+    </dependency>
+
+      <dependency>
         <groupId>org.apache.shiro</groupId>
         <artifactId>shiro-core</artifactId>
         <version>${shiro.version}</version>
+        <classifier>jakarta</classifier>
       </dependency>
       <dependency>
         <groupId>org.apache.shiro</groupId>
         <artifactId>shiro-web</artifactId>
         <version>${shiro.version}</version>
+        <classifier>jakarta</classifier>
       </dependency>
       <dependency>
         <groupId>org.apache.shiro</groupId>
         <artifactId>shiro-spring</artifactId>
         <version>${shiro.version}</version>
+        <classifier>jakarta</classifier>
+        <exclusions>
+          <exclusion>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-core</artifactId>
+          </exclusion>
+          <exclusion>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-web</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
       <dependency>
         <groupId>org.apache.shiro</groupId>
         <artifactId>shiro-ehcache</artifactId>
         <version>${shiro.version}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>net.sf.ehcache</groupId>
+            <artifactId>ehcache-core</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
       <dependency>
         <groupId>eu.flatwhite.shiro</groupId>
         <artifactId>shiro-extras</artifactId>
         <version>${shiro-extras.version}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-core</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
       <dependency>
         <groupId>org.apache.shiro.tools</groupId>
@@ -440,27 +513,9 @@
       </dependency>
 
       <dependency>
-        <groupId>org.apache.oltu.oauth2</groupId>
-        <artifactId>org.apache.oltu.oauth2.authzserver</artifactId>
-        <version>${oltu.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.oltu.oauth2</groupId>
-        <artifactId>org.apache.oltu.oauth2.resourceserver</artifactId>
-        <version>${oltu.version}</version>
-      </dependency>
-
-      <dependency>
         <groupId>io.jsonwebtoken</groupId>
-        <artifactId>jjwt</artifactId>
+        <artifactId>jjwt-api</artifactId>
         <version>${jjwt.version}</version>
-      </dependency>
-
-      <dependency>
-        <groupId>de.flapdoodle.embed</groupId>
-        <artifactId>de.flapdoodle.embed.mongo</artifactId>
-        <version>${embed-mongo.version}</version>
-        <scope>test</scope>
       </dependency>
 
       <dependency>
@@ -500,7 +555,7 @@
       </exclusions>
     </dependency>
 
-    <dependency>
+    <!--<dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-logging</artifactId>
       <exclusions>
@@ -513,6 +568,19 @@
           <artifactId>log4j-over-slf4j</artifactId>
         </exclusion>
       </exclusions>
+    </dependency>-->
+
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-mongodb</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-cache</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>javax.cache</groupId>
+      <artifactId>cache-api</artifactId>
     </dependency>
 
     <dependency>
@@ -556,10 +624,6 @@
       <scope>compile</scope>
     </dependency>
 
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-api</artifactId>
-    </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>jcl-over-slf4j</artifactId>
@@ -661,14 +725,9 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
           <useSystemClassLoader>false</useSystemClassLoader>
-          <argLine>-XX:MaxPermSize=128m -Xmx256m</argLine>
-          <forkCount>1</forkCount>
-          <reuseForks>false</reuseForks>
-          <!-- Force alphabetical order to have a reproducible build -->
-          <runOrder>alphabetical</runOrder>
-          <classpathDependencyExcludes>
-            <classpathDependencyExclude>org.springsource.loaded:springloaded</classpathDependencyExclude>
-          </classpathDependencyExcludes>
+          <argLine>
+            --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED
+          </argLine>
         </configuration>
       </plugin>
 
@@ -725,23 +784,6 @@
             <goals>
               <goal>jar</goal>
             </goals>
-          </execution>
-        </executions>
-      </plugin>
-
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-javadoc-plugin</artifactId>
-        <version>3.5.0</version>
-        <executions>
-          <execution>
-            <id>attach-javadocs</id>
-            <goals>
-              <goal>jar</goal>
-            </goals>
-            <configuration>
-              <additionalparam>-Xdoclint:none</additionalparam>
-            </configuration>
           </execution>
         </executions>
       </plugin>
